--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
+  "name": "musibot",
+  "version": "2.0.0",
+  "description": "A Discord music bot for playing YouTube songs",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.js\""
+  },
+  "keywords": ["discord", "bot", "music", "youtube"],
+  "author": "Sunflames",
+  "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "discord-music-player": "^9.1.1",
     "discord-player": "^6.3.0",
     "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "isomorphic-unfetch": "^3.1.0",
     "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
