--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "name": "musibot",
-  "version": "2.0.0",
-  "description": "A Discord music bot for playing YouTube songs",
+  "version": "3.0.0",
+  "description": "Discord music bot with SoundCloud support and web dashboard",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"**/*.js\""
+    "start": "node index.js"
   },
-  "keywords": ["discord", "bot", "music", "youtube"],
-  "author": "Sunflames",
+  "keywords": ["discord", "bot", "music", "soundcloud"],
+  "author": "",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "discord-music-player": "^9.1.1",
-    "discord-player": "^6.3.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^5.1.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "opusscript": "^0.0.8",
-    "ytdl-core": "^4.11.4"
-  },
-  "devDependencies": {
-    "eslint": "^8.50.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3"
+    "@discordjs/voice": "^0.17.0",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
+    "play-dl": "^1.9.7",
+    "sodium-native": "^4.1.1"
   }
 }
